# rts

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FetchMimalloc.cmake  FetchSDL3.cmake  FetchVMA.cmake  FetchVolk.cmake  FetchVulkan.cmake
resources/: settings.cfg
src/: main.c
src/game/: game.c  game.h
src/render/: render.c  render.h  resource.c  resource.h  shader.c  types.h
src/shaders/: visibility_vertex.hlsl
src/system/: app.c  app.h  arena.c  arena.h  atomic.c  atomic.h  common.h  config.c  config.h  context.c  context.h  core.h  debug.h  deque.c  deque.h  deque2.c  deque2.h  fiber.c  fiber.h  fiber_init.S  fiber_swap.S  input.c  input.h  job.c  job.h  math.h  memory.c  memory.h  pool.c  profiler.c  profiler.h  render.c  render.h  task.c  task.h  task2.c  task2.h  thread_pool.c  thread_pool.h
